--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.469.0",
     "mongodb": "^7.1.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "socket.io": "^4.8.3",
